--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -441,5 +441,6 @@
   "edit_ingredient": "Изменить ингредиент",
   "edit_recipe": "Редактировать рецепт",
   "add_cooking_step": "Добавление шага приготовления",
-  "edit_cooking_step": "Редактировать этап приготовления"
+  "edit_cooking_step": "Редактировать этап приготовления",
+  "recipe detail": "Подробности рецепта"
 }
