--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -380,7 +380,7 @@
   "Recipes": "Retseptlar",
   "preparation_time": "Tayyorgarlik vaqti",
   "calorie": "Kaloriya",
-  "rating": "Reyting",
+  "rating": "Baho",
   "select_category": "Kategoriyani tanlang",
   "views": "Koʻrishlar",
   "splash": "Splash",
@@ -392,8 +392,8 @@
   "edit_recipe_category": "Retsept toifasini tahrirlash",
   "add_recipe": "Retsept qo'shish",
   "calorie_content": "Kaloriya tarkibi",
-  "cooking_time": "Pishirish vaqti",
-  "mediacontent": "Media kontenti",
+  "cooking_time": "Tayyorlanish vaqti",
+  "mediacontent": "Media kontent",
   "Content format and size: jpg / mp4 / 1920x1080": "Kontent formati va hajmi: jpg / mp4 / 1920x1080",
   "Ingredients": "Masalliqlar",
   "type_quantity": "Miqdor turi",
