--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -251,7 +251,7 @@
   "AddPromotion": "Реклама қўшиш",
   "Add Button": "Тугма қўшиш",
   "Button Type": "Тугма тури",
-  "RECIPES": "Рецептлар",
+  "Recipes": "Рецептлар",
   "hour": "с",
   "minute": "д",
   "start_date": "Бошланиш санаси:",
@@ -374,5 +374,34 @@
   "add banner": "Баннер қўшиш",
   "contacts": "Контактлар",
   "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Телефон рақами форматда киритилиши керак: ʼ998 [ХХ] [ХХХ ХХ ХХ]",
-  "phone_numbers": "Телефон рақамлари"
+  "phone_numbers": "Телефон рақамлари",
+
+  "rating": "Баҳо",
+  "preparation_time": "Тайёрланиш вақти",
+  "select_category": "Категорияни танланг",
+  "views": "Кўришлар",
+  "recipe category": "Рецептлар тоифаси",
+  "color": "Ранг",
+  "add_splash": "Сплаш қўшиш",
+  "edit_splash": "Сплашни таҳрирлаш",
+  "add_recipe_category": "Рецепт тоифасини қўшиш",
+  "edit_recipe_category": "Рецепт тоифасини таҳрирлаш",
+  "add_recipe": "Рецепт қўшиш",
+  "calorie_content": "Калория таркиби",
+  "mediacontent": "Медиаконтент",
+  "Ingredients": "Масаллиқлар",
+  "type_quantity": "Миқдор тури",
+  "select_product": "Маҳсулотни танланг",
+  "select_type": "Турини танланг",
+  "add_product": "Маҳсулот қўшиш",
+  "Preparation": "Пиширилиш босқичи",
+  "General": "Генерал",
+  "Add quantity type": "Миқдор турини қўшиш",
+  "Edit quantity type": "Миқдор турини таҳрирлаш",
+  "add_ingredient": "Масаллиқ қўшиш",
+  "edit_ingredient": "Масаллиқни таҳрирлаш",
+  "edit_recipe": "Рецептни таҳрирлаш",
+  "add_cooking_step": "Пишириш босқичини қўшиш",
+  "edit_cooking_step": "Пишириш босқичини таҳрирлаш",
+  "recipe detail": "Рецепт тафсилотлари"
 }
