--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -376,9 +376,9 @@
   "contacts": "Kontaktlar",
   "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Telefon raqami formatda kiritilishi kerak: '998 [XX] [XXX XX XX]",
   "phone_numbers": "Telefon raqamlari",
-  "added_time": "Qoshilgan vaqt",
+  "added_time": "Qo'shilgan vaqt",
   "Recipes": "Retseptlar",
-  "preparation_time": "Tayyorgarlik vaqti",
+  "preparation_time": "Tayyorlanish vaqti",
   "calorie": "Kaloriya",
   "rating": "Baho",
   "select_category": "Kategoriyani tanlang",
@@ -392,7 +392,6 @@
   "edit_recipe_category": "Retsept toifasini tahrirlash",
   "add_recipe": "Retsept qo'shish",
   "calorie_content": "Kaloriya tarkibi",
-  "cooking_time": "Tayyorlanish vaqti",
   "mediacontent": "Media kontent",
   "Content format and size: jpg / mp4 / 1920x1080": "Kontent formati va hajmi: jpg / mp4 / 1920x1080",
   "Ingredients": "Masalliqlar",
@@ -404,8 +403,8 @@
   "General": "General",
   "Add quantity type": "Miqdor turini qo'shish",
   "Edit quantity type": "Miqdor turini tahrirlash",
-  "add_ingredient": "Ingredient qo'shish",
-  "edit_ingredient": "Ingredientni tahrirlash",
+  "add_ingredient": "Masalliq qo'shish",
+  "edit_ingredient": "Masalliqni tahrirlash",
   "edit_recipe": "Retseptni tahrirlash",
   "add_cooking_step": "Pishirish bosqichini qo'shish",
   "edit_cooking_step": "Pishirish bosqichini tahrirlash",
