--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -403,5 +403,7 @@
   "edit_recipe": "Рецептни таҳрирлаш",
   "add_cooking_step": "Пишириш босқичини қўшиш",
   "edit_cooking_step": "Пишириш босқичини таҳрирлаш",
-  "recipe detail": "Рецепт тафсилотлари"
+  "recipe detail": "Рецепт тафсилотлари",
+  "Activity": "Фаоллик",
+  "changing": "Ўзгартириш"
 }
