--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -441,5 +441,7 @@
   "edit_recipe": "Редактировать рецепт",
   "add_cooking_step": "Добавление шага приготовления",
   "edit_cooking_step": "Редактировать этап приготовления",
-  "recipe detail": "Подробности рецепта"
+  "recipe detail": "Подробности рецепта",
+  "Activity": "Активность",
+  "changing": "Изменение"
 }
