--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -408,6 +408,6 @@
   "changing": "Ўзгартириш",
   "add_district": "Туман қўшиш",
   "edit_district": "Туманни таҳрирлаш",
-  "districts": "Туманлар"
-
+  "districts": "Туманлар",
+  "product_categories": "Маҳсулотлар тоифалари"
 }
