--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -446,5 +446,6 @@
   "changing": "Изменение",
   "add_district": "Добавление района",
   "edit_district": "Изменить район",
-  "districts": "Районы"
+  "districts": "Районы",
+  "product_categories": "Категории Продуктов"
 }
