--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -413,5 +413,6 @@
   "changing": "O'zgartirish",
   "add_district": "Tuman qo'shish",
   "edit_district": "Tumanni tahrirlash",
-  "districts": "Tumanlar"
+  "districts": "Tumanlar",
+  "product_categories": "Mahsulotlar toifalari"
 }
