--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -51,6 +51,7 @@
     "audio": "Аудио"
   },
   "Discounted_price": "Чегирмали нарх",
+  "som": "сум",
   "sec": "секунд",
   "gender": "Жинс",
   "Male": "Эркак",
