--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -55,6 +55,7 @@
     "question": "Вопрос",
     "audio": "Аудио"
   },
+  "som": "сум",
   "Discounted_price": "Цена со скидкой",
   "Draft": "Черновик",
   "codeCountSmall": "Числа не могут быть меньше 13",
