--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -50,6 +50,7 @@
     "question": "Savol",
     "audio": "Audio"
   },
+  "som": "so'm",
   "Discounted_price": "Chegirmali narx",
   "logout": "Chiqish",
   "nameButton": "Tugma nomi",
