--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -408,6 +408,10 @@
   "changing": "Ўзгартириш",
   "add_district": "Туман қўшиш",
   "edit_district": "Туманни таҳрирлаш",
-  "districts": "Туманлар"
+  "districts": "Туманлар",
+  "error_response": "Хато хабари",
+  "status_code": "Статус коди",
+  "message": "Хабар",
+  "edit_message": "Хабарни таҳрирлаш"
 
 }
