--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -446,5 +446,9 @@
   "changing": "Изменение",
   "add_district": "Добавление района",
   "edit_district": "Изменить район",
-  "districts": "Районы"
+  "districts": "Районы",
+  "error_response": "Сообщение об ошибке",
+  "status_code": "Код состояния",
+  "message": "Сообщение",
+  "edit_message": "Редактировать сообщение"
 }
