--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -413,5 +413,9 @@
   "changing": "O'zgartirish",
   "add_district": "Tuman qo'shish",
   "edit_district": "Tumanni tahrirlash",
-  "districts": "Tumanlar"
+  "districts": "Tumanlar",
+  "error_response": "Xato xabari",
+  "status_code": "Status kodi",
+  "message": "Xabar",
+  "edit_message": "Xabarni tahrirlash"
 }
