--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -50,9 +50,14 @@
     "question": "Савол",
     "audio": "Аудио"
   },
+  "AddFaqsTemplate": "Тез-тез сўраладиган саволлар шаблонини қўшинг",
+  "EditFaqsTemplate": "Тез-тез сўраладиган саволлар шаблонини таҳрирлаш",
   "Discounted_price": "Чегирмали нарх",
   "som": "сум",
+  "Question": "Вопрос",
+  "Answer": "Ответ",
   "sec": "секунд",
+  "faqs": "Саволлар",
   "gender": "Жинс",
   "Male": "Эркак",
   "Female": "Аёл",
@@ -101,6 +106,8 @@
   "Poll Details": "Сўров тафсилотлари",
   "Poll Questions Add": "Сўровномага саволлар қўшинг",
   "options": "Вариантлар",
+  "watched": "Кўрилди",
+  "last_poll": "Сўровномада қатнашганлар",
   "Password": "Парол",
   "help": "Ёрдам",
   "privacy_policy": "Сиёсат",
