--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -55,7 +55,12 @@
     "question": "Вопрос",
     "audio": "Аудио"
   },
+  "faqs": "Вопросы",
+  "AddFaqsTemplate": "Добавить шаблон часто задаваемых вопросов",
+  "EditFaqsTemplate": "Изменить шаблон часто задаваемых вопросов",
   "som": "сум",
+  "Question": "Вопрос",
+  "Answer": "Ответ",
   "Discounted_price": "Цена со скидкой",
   "Draft": "Черновик",
   "codeCountSmall": "Числа не могут быть меньше 13",
@@ -269,7 +274,9 @@
   "REJECTED": "отклоненный",
   "history": "История",
   "hour": "ч",
-  "options": "Variantlar",
+  "options": "Параметры",
+  "watched": "Просмотрено",
+  "last_poll": "Прошли опрос",
   "minute": "м",
   "addPhoto": "Добавить фото и кнопку",
   "AddStory": "Добавить историю",
