--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -50,6 +50,11 @@
     "question": "Savol",
     "audio": "Audio"
   },
+  "Question": "Савол",
+  "Answer": "Жавоб",
+  "AddFaqsTemplate": "Tez-tez so'raladigan savollar shablonini qo'shing",
+  "EditFaqsTemplate": "Tez-tez so'raladigan savollar shablonini tahrirlash",
+  "faqs": "Savollar",
   "som": "so'm",
   "Discounted_price": "Chegirmali narx",
   "logout": "Chiqish",
@@ -100,7 +105,9 @@
   "Login": "Login",
   "Poll Details": "So‘rov tafsilotlari",
   "Poll Questions Add": "So'rovnomaga savollar qo'shing",
-  "options": "Параметры",
+  "options": "Variantlar",
+  "watched": "Ko'rildi",
+  "last_poll": "So'rovnomada qatnashganlar",
   "Password": "Parol",
   "help": "Yordam",
   "privacy_policy": "Siyosat",
