--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -166,12 +166,26 @@
   "No, cancel!": "Йўқ, бекор қилиш!",
   "file_input": "Файл киритиш",
   "no_data": "Маълумотлар йўқ",
+  "active_session": "Фаол сеанслар",
+  "Device": "Қурилма",
+  "version_app": "Илова версияси",
+  "date_created": "Яратилган сана",
+  "coming": "Ташриф",
+  "finishing": "Бажарилди",
+  "number_card": "Номер карты",
+  "type_card": "Тип карты",
+  "added": "Қўшилган",
+  "cards": "Карталар",
   "Published": "Чоп этилган",
   "choose_file": "Файл танланг",
+  "Profile": "Профил",
+  "Father_name": "Ўрта исм",
   "enter_information": "Маълумот киритинг",
   "Wrong password!": "Пароль нотоғри!",
   "email": "Э-маил",
+  "Created": "Яратилган",
   "Author": "Муаллиф",
+  "date_birth": "Туғилган куни",
   "this_category_has_courses": "Ушбу туркумда курслар мавжуд",
   "Yes, unarchive!": "Ҳа, архивдан чиқаринг!",
   "User with that username already exists!": "Бундай фойдаланувчи номи аллақачон мавжуд!",
