--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -207,9 +207,23 @@
   "Detail photo": "Детальное фото",
   "Background photo": "Фоновое фото",
   "enter_information": "Введите информацию",
+  "Profile": "Профил",
+  "Father_name": "Отчества",
+  "date_birth": "Дата рождения",
   "Wrong password!": "Неправильный пароль!",
   "email": "E-mail",
   "Author": "Автор",
+  "Created": "Создано",
+  "number_card": "Номер карты",
+  "type_card": "Тип карты",
+  "added": "Добавлено",
+  "cards": "Карты",
+  "active_session": "Активные сессии",
+  "Device": "Устройство",
+  "version_app": "Версия приложения",
+  "date_created": "Дата создания",
+  "coming": "Посещение",
+  "finishing": "Завершить",
   "this_category_has_courses": "В этой категории есть курсы",
   "Yes, unarchive!": "Да, разархивировать!",
   "User with that username already exists!": "Пользователь с таким именем уже существует!",
