--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -171,7 +171,21 @@
   "enter_information": "Ma'lumot kiriting",
   "Wrong password!": "Parol notog'ri!",
   "email": "E-mail",
+  "Profile": "Profil",
+  "number_card": "Карта рақами",
+  "type_card": "Карта тури",
   "Author": "Muallif",
+  "Father_name": "O'rta ism",
+  "date_birth": "Tug'ilgan kuni",
+  "Created": "Yaratilgan",
+  "added": "Qo'shilgan",
+  "cards": "Kartalar",
+  "active_session": "Faol seanslar",
+  "Device": "Qurilma",
+  "version_app": "Ilova versiyasi",
+  "date_created": "Yaratilgan sana",
+  "coming": "Tashrif",
+  "finishing": "Bajarildi",
   "this_category_has_courses": "Ushbu turkumda kurslar mavjud",
   "Yes, unarchive!": "Ha, arxivdan chiqaring!",
   "User with that username already exists!": "Bunday foydalanuvchi nomi allaqachon mavjud!",
