--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -178,6 +178,7 @@
   "cards": "Карталар",
   "Published": "Чоп этилган",
   "choose_file": "Файл танланг",
+  "finish_session": "Сеансни тугатиш",
   "Profile": "Профил",
   "Father_name": "Ўрта исм",
   "enter_information": "Маълумот киритинг",
