--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -217,6 +217,7 @@
   "number_card": "Номер карты",
   "type_card": "Тип карты",
   "added": "Добавлено",
+  "finish_session": "Завершить сеанс",
   "cards": "Карты",
   "active_session": "Активные сессии",
   "Device": "Устройство",
