--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -73,6 +73,7 @@
   "success": "Muvaffaqiyatli",
   "Male": "Erkak",
   "Female": "Ayol",
+  "finish_session": "Seansni tugatish",
   "error": "Xatolik",
   "Search": "Qidirish",
   "Add": "Qo'shish",
