--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -171,7 +171,7 @@
   "version_app": "Илова версияси",
   "date_created": "Яратилган сана",
   "coming": "Ташриф",
-  "finishing": "Бажарилди",
+  "finishing": "Якунлаш",
   "number_card": "Номер карты",
   "type_card": "Тип карты",
   "added": "Қўшилган",
@@ -180,7 +180,7 @@
   "choose_file": "Файл танланг",
   "finish_session": "Сеансни тугатиш",
   "Profile": "Профил",
-  "Father_name": "Ўрта исм",
+  "Father_name": "Отасини исми",
   "enter_information": "Маълумот киритинг",
   "Wrong password!": "Пароль нотоғри!",
   "email": "Э-маил",
