--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -176,7 +176,7 @@
   "number_card": "Карта рақами",
   "type_card": "Карта тури",
   "Author": "Muallif",
-  "Father_name": "O'rta ism",
+  "Father_name": "Otasini ismi",
   "date_birth": "Tug'ilgan kuni",
   "Created": "Yaratilgan",
   "added": "Qo'shilgan",
@@ -186,7 +186,7 @@
   "version_app": "Ilova versiyasi",
   "date_created": "Yaratilgan sana",
   "coming": "Tashrif",
-  "finishing": "Bajarildi",
+  "finishing": "Yakunlash",
   "this_category_has_courses": "Ushbu turkumda kurslar mavjud",
   "Yes, unarchive!": "Ha, arxivdan chiqaring!",
   "User with that username already exists!": "Bunday foydalanuvchi nomi allaqachon mavjud!",
