--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -176,6 +176,10 @@
   "type_card": "Тип карты",
   "added": "Қўшилган",
   "cards": "Карталар",
+  "ios": "IOS",
+  "android": "Android",
+  "users": "Фойдаланувчилар",
+  "admins": "Админлар",
   "Published": "Чоп этилган",
   "choose_file": "Файл танланг",
   "finish_session": "Сеансни тугатиш",
@@ -326,7 +330,7 @@
   "region": "Вилоятлар",
   "Error from server!": "Сервердан хато!",
   "address": "Манзил",
-  "dashboard": "Бошқарув панели",
+  "dashboard": "Асосий саҳифа",
   "product": "Маҳсулот",
   "detailNotification": "Хабарнома тафсилотлари",
   "detailNews": "Янгилик тафсилотлари",
