--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -328,12 +328,16 @@
   "region": "Viloyatlar",
   "Error from server!": "Serverdan xato!",
   "address": "Manzil",
-  "dashboard": "Boshqaruv paneli",
+  "dashboard": "Asosiy sahifa",
   "product": "Mahsulot",
   "detailNotification": "Xabarnoma tafsilotlari",
   "detailNews": "Yangilik tafsilotlari",
   "View": "Ko'rinish",
   "All": "Hammasi",
+  "ios": "IOS",
+  "android": "Android",
+  "users": "Foydalanuvchilar",
+  "admins": "Adminlar",
   "Administration": "Ma'muriyat",
   "backups": "Zaxira nusxalari",
   "date_from": "Sanadan",
