--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -335,9 +335,13 @@
   "phone_number_exists": "Номер телефона с таким номером уже существует",
   "Link": "Линк",
   "phones": "Телефоны",
-  "dashboard": "Панель приборов",
+  "dashboard": "Домашняя страница",
   "product": "Продукт",
   "View": "Вид",
+  "ios": "IOS",
+  "android": "Android",
+  "users": "Пользователи",
+  "admins": "Админы",
   "All": "Все",
   "Administration": "Администрация",
   "backups": "Резервные копии",
