--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -102,7 +102,7 @@
   "Phone": "Телефон рақами",
   "Date of entry": "Кириш санаси",
   "Status": "Ҳолати",
-  "Login": "Логин",
+  "Login": "Кириш",
   "Poll Details": "Сўров тафсилотлари",
   "Poll Questions Add": "Сўровномага саволлар қўшинг",
   "options": "Вариантлар",
@@ -315,6 +315,7 @@
   "are you really going to delete this user": "Сиз ҳақиқатан ҳам бу фойдаланувчини ўчириб ташламоқчимисиз?",
   "are_you_really_terminate_session": "Ҳақиқатан ҳам сессияни тугатяпсизми?",
   "delete": "Ўчириш",
+  "enter_to_system": "Тизимга кириш",
   "Notifications": "Билдиришномалар",
   "username": "Логин",
   "last_visit": "Охирги ташриф",
