--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -103,7 +103,7 @@
   "Phone": "Telefon raqami",
   "Date of entry": "Kirish sanasi",
   "Status": "Holati",
-  "Login": "Login",
+  "Login": "Kirish",
   "Poll Details": "So‘rov tafsilotlari",
   "Poll Questions Add": "So'rovnomaga savollar qo'shing",
   "options": "Variantlar",
@@ -313,6 +313,7 @@
   "are you really going to delete this user": "Siz haqiqatan ham bu foydalanuvchini o'chirib tashlamoqchimisiz?",
   "are_you_really_terminate_session": "Haqiqatan ham sessiyani tugatyapsizmi?",
   "delete": "O'chirish",
+  "enter_to_system": "Tizimga kirish",
   "Notifications": "Bildirishnomalar",
   "username": "Login",
   "last_visit": "Oxirgi tashrif",
