--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -153,7 +153,7 @@
   "Phone": "Телефон",
   "Date of entry": "Дата поступления",
   "Status": "Статус",
-  "Login": "Вход",
+  "Login": "Логин",
   "CountQuestion": "Вопросы",
   "Password": "Пароль",
   "help": "Помощь",
@@ -320,6 +320,7 @@
   "Set date and time": "Задать дату и время",
   "news": "Новости",
   "enter_to_system": "Вход в систему",
+  "LoginSystem": "Войти",
   "start time/ end time": "Время начала/время окончания",
   "are you really going to delete this user": "Ты действительно собираешься удалить этого пользователя?",
   "are_you_really_terminate_session": "Ты действительно завершаешь сеанс?",
